--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       <a href="#"><img src="" alt="" id="logo" /></a>
       <p></p>
     </header>
-    <section>h3+</section>
+    <section>
+      <div id="btn1" class="btn1"><img src="" alt="" /></div>
+      <div id="btn1" class="btn1"><img src="" alt="" /></div>
+      <div id="btn1" class="btn1"><img src="" alt="" /></div>
+    </section>
     <section></section>
     <section></section>
   </body>
