tried and failed setting up the design

--- a/index.html
+++ b/index.html
@@ -8,16 +8,55 @@
   </head>
   <body>
     <header>
-      <h1></h1>
-      <a href="#"><img src="" alt="" id="logo" /></a>
-      <p></p>
+      <h1>The Boundry Between uuuuhhh..</h1>
+      <div id="heading">
+        <a href="#"
+          ><img
+            src="./images_icon/game-icons--forest-entrance.png"
+            alt="forestlogo"
+            id="logo"
+        /></a>
+        <a href="#"
+          ><img
+            src="./images_icon/fluent-emoji-high-contrast--water-wave.png"
+            alt="waterlogo"
+            id="logo"
+        /></a>
+      </div>
+      <p>Here lies a few pictures showing the forest and waterdroplets.</p>
     </header>
     <section>
-      <div id="btn1" class="btn1"><img src="" alt="" /></div>
-      <div id="btn1" class="btn1"><img src="" alt="" /></div>
-      <div id="btn1" class="btn1"><img src="" alt="" /></div>
+      <div id="forest_btn1" class="btn">
+        <img
+          src="./images_x/forestlake.jpg"
+          alt="Forest lake in beautiful view."
+        />
+      </div>
+      <div id="forest_btn2" class="btn">
+        <img
+          src="./images_x/forestmoss.jpg"
+          alt="A forest bed covered in wonderful moss."
+        />
+      </div>
+      <div id="forest_btn3" class="btn">
+        <img
+          src="./images_x/foresttrail-evening.jpg"
+          alt="Foresttrail in delightful evening light."
+        />
+      </div>
+      <div id="forest_btn4" class="btn">
+        <img
+          src="./images_x/foresttrail-morning.jpg"
+          alt="Foresttrail under the morning light."
+        />
+      </div>
     </section>
-    <section></section>
+    <section>
+      <div id="ocean_btn1" class="btn"><img src="" alt="" /></div>
+      <div id="ocean_btn2" class="btn"><img src="" alt="" /></div>
+      <div id="ocean_btn3" class="btn"><img src="" alt="" /></div>
+      <div id="ocean_btn4" class="btn"><img src="" alt="" /></div>
+    </section>
     <section></section>
   </body>
 </html>
