--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
       </nav>
     </main>
 
+    <!-- I want the section under to stick to the right side of the screen, while having the main, containing the nav, to stick on the left side. -->
+
     <!-- The expanding image container -->
     <section class="picture-container">
       <!-- Close the image -->
